--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "method-override": "^2.1.3",
     "mongoose": "^4.4.12",
     "morgan": "^1.1.1"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
