--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "express": "^4.13.4",
     "method-override": "^2.1.3",
     "mongoose": "^4.4.12",
-    "morgan": "^1.1.1"
+    "morgan": "^1.1.1",
+    "dotenv": "^2.0.0",
+    "method-override": "^2.3.6",
+    "mongoose": "^4.5.9",
+    "morgan": "^1.7.0",
+    "serve-favicon": "^2.3.0",
+    "twitter": "^1.4.0"
   },
   "scripts": {
     "start": "node server.js"
