--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "twitter": "^1.4.0"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "NODE_ENV=dev npm start"
   }
 }
